--- a/django/contrib/admin/static/admin/css/rtl.css
+++ b/django/contrib/admin/static/admin/css/rtl.css
@@ -115,7 +115,7 @@ thead th.sorted .text {
 }
 
 .submit-row {
-    text-align: left
+    text-align: left;
 }
 
 .submit-row p.deletelink-box {
